﻿===

jAnrufmonitor 5.0.40 (01.06.2013)
---------------------------------

Neu:
- Kontakte/Journal: Land als Flagge darstellbar
- Kontakte/Journal: Telefonbuch als Logo darstellbar
- Journal: Ansicht-Filter über Einstellungen -> Journale änderbar
- TrayIcon: Icon jami.ico für eingeschränkte Funktion hinzugefügt

Bugfix:
- Dialog: Anzeige von Land und Telefonbuch als Icon im Balloon-Dialog
- Identifizierung: Fehler bei der Erkennung von 1-stelligen Vorwahlen, z.B. Wien 

Module:
- Fritz!Box-Überwachung: Icon als Telefonbuch-Logo im Journal hinzugefügt
- Fritz!Box-Überwachung: Hinweis bei Anmeldefehler auf Passwort und Benutzer Prüfung
- www.DasOertliche.de: Icon als Telefonbuch-Logo im Journal hinzugefügt
- DasTelefonbuch.de: Icon als Telefonbuch-Logo im Journal hinzugefügt
- gelbeseitenn.de: Icon als Telefonbuch-Logo im Journal hinzugefügt
- 11880.com: Icon als Telefonbuch-Logo im Journal hinzugefügt
- klicktel.de: Icon als Telefonbuch-Logo im Journal hinzugefügt
- tel.search.ch: Icon als Telefonbuch-Logo im Journal hinzugefügt
- tellows Rufnummer Scoring: Anpassung des Dialogs für Land und Telefonbuch Icon 
- Apple Mac Adressbuch: Icon als Telefonbuch-Logo im Journal hinzugefügt
- Google Kontakte: Icon als Telefonbuch-Logo im Journal hinzugefügt
- Microsoft Outlook Kontaktverzeichnis: Icon als Telefonbuch-Logo im Journal hinzugefügt
- MySQL Adressbuch / Journal: Icon als Telefonbuch-Logo im Journal hinzugefügt
- Mozilla Thunderbird Adressbuch: Icon als Telefonbuch-Logo im Journal hinzugefügt
- Erweiterung zur Google Maps Lokalisierung: Darstellen des Kartenausschnitts im Journal

===


jAnrufmonitor 5.0.39 (01.05.2013)
---------------------------------

Bugfix:
- Dialog: Farbauswahl für dunkle Farben korrigiert
- Journal: Erneute Anrufer-Identifizierung nutzt automatische Geokodierung
- Installer: Standard-Installationsverzeichnis auf C:\jAnrufmonitor geändert

Module: